# barc4beams

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: README.MD  ex_01_beam_from_raytracing_codes.ipynb  ex_01a_beam_from_raytracing_codes-mirror_focusing.ipynb  ex_01b_beam_from_raytracing_code-crl_focusing.ipynb  ex_01b_beam_from_raytracing_codes.ipynb  ex_01d_beam_from_raytracing_codes-plotting.ipynb  ex_02_beam_from_wave_propagation_codes.ipynb  ex_02a_beam_collection.ipynb  ex_02b_beam_ensemble.ipynb  ex_03_beam_collection.ipynb  ex_03a_beam_from_wave_propagation_codes-NF_FF.ipynb  ex_03b_beam_from_wave_propagation_codes-intensity_phase.ipynb  ex_03c_beam_from_wave_propagation_codes-intensity_apply_complex_wavefront.ipynb  ex_04_beam_ensemble.ipynb
examples/beams/: b4b_beam_ideal_crl_focusing.h5  s4_ideal_crl_focusing.h5  s4_ideal_toroid_focusing.h5
src/barc4beams/: __init__.py  _config.py  _version.py  adapters.py  beam.py  caustics.py  compare.py  io.py  misc.py  parsing.py  propagation.py  sampling.py  schema.py  stats.py  utils.py  viz.py  wave.py
tests/: test_adapters.py  test_beam_stats.py  test_import.py  test_io_roundtrip.py  test_plotting.py  test_schema.py  test_wave_metrics.py
