[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barc4beams"
version = "2025.11.26"
description = "A Python project for: standardization, statistics, and plotting ray-traced photon beams (PyOptiX, SHADOW3/4)."
readme = "README.md"
license = "CECILL-2.1"
authors = [{ name = "Rafael Celestre", email = "rafael.celestre@synchrotron-soleil.fr" }]
keywords = ["ray-tracing", "beamline design", "x-ray optics", "optics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "matplotlib>=3.6",
    "h5py>=3.8",
]

[project.urls]
Homepage = "https://github.com/barc4/barc4beams"
Repository = "https://github.com/barc4/barc4beams"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.2",
]